[package]
authors = [
  "siwilizhao <siwilizhao@gmail.com>",
] 
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
] 
description = "A minimal Rust web application framework" 
documentation = "https://docs.rs/desirable" 
edition = "2024" 
keywords = ["desirable", "http", "web", "framework", "async"] 
license = "Apache-2.0" 
name = "desirable" 
publish = true # no accidents while in dev
readme = "README.md" 
repository = "https://github.com/desirable-rs/desirable" 
version = "0.1.1" 

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*", #"build.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
async-trait = "^0.1"
bytes = "1.10.0"
chrono = {version = "0.4.40", features = ["serde"]}
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = {version = "1.6.0", features = ["full"]}
hyper-util = {version = "0.1.10", features = ["full"]}
mime = "0.3.17"
route-recognizer = "0.3.1"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
serde_urlencoded = "0.7"
thiserror = "2.0.11"
tokio = {version = "^1.43", features = ["full"]}
tracing = "^0.1"
[dev-dependencies]

[features]
# Nothing by default
default = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
